# BLR_AQI

./: .gitignore  Dockerfile  Makefile  README.md  aqi_standard_features.csv  blr-bapuji-nagar-kspcb-2024-25.csv  blr-btm-layout-cpcb-2024-25.csv  blr-city-railway-station-kspcb-2024-25.csv  blr-hebbal-kspcb-2024-25.csv  blr-hombegowda-nagar-kspcb-2024-25.csv  blr-jigani-kspcb-2024-25.csv  blr-kasturi-nagar-kspcb-2024-25.csv  blr-peenya-cpcb-2024-25.csv  blr-rvce-mailasandra-kspcb-2024-25.csv  blr-sanegurava-halli-kspcb-2024-25.csv  blr-shivapura_peenya-kspcb-2024-25.csv  blr-silk-board-kspcb-2024-25.csv  clean_engineer_aqi.py  engineered_aqi_data.csv  eval_et.py  eval_knn.py  eval_lag.py  eval_lgb.py  eval_rf.py  inspect_grid.py  merge_aqi_csvs.py  merged_aqi_data.csv  package.json  prepare_aqi_standard_features.py  pyproject.toml  test_api.py  test_indexing.py  train_hybrid_aqi_model.py
.next/: trace
.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
app/: page.tsx
configs/: academic.yaml  data.yaml  model.yaml  routing.yaml
docker/: docker-compose.yml
frontend/: package.json
frontend/app/: page.tsx
frontend/public/: index.html  script.js  script_backup.js  style.css
models/street_downscaler/: street_downscaler_h168_test_predictions.csv  street_downscaler_h168_trials.csv  (+4 more)
scripts/: fetch_cpcb_live_station_aqi.py  fetch_live_station_aqi.py  make_street_labels_template.py  run_journal_validation.py  run_paper_experiments.py  train_street_downscaler.py  validate_spatial_interpolation.py
src/api/: bias_store.py  (+2 more)
(+39 files in other folders)
